syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

import "DealAddFriendResultType.proto";

// CmdId: 4035
// EnetChannelId: 0
// EnetIsReliable: true
// IsAllowClient: true
message DealAddFriendRsp {
	int32 retcode = 3;
	uint32 target_uid = 2;
	DealAddFriendResultType deal_add_friend_result = 15;
}
