syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

enum DealAddFriendResultType {
	DEAL_ADD_FRIEND_REJECT = 0;
	DEAL_ADD_FRIEND_ACCEPT = 1;
}
